--- a/view/index.html
+++ b/view/index.html
@@ -46,18 +46,20 @@
             </a>
             <div class="searchBox">
                 <div class="searchGroup">
-                    <a class="searchBefore">
-
-                    </a>
+                    <span class="searchBefore">
+                        <em>请选择省份</em>
+                        <i>&nbsp;</i>
+                        <em>请选择地区</em>
+                    </span>
                     <div class="searchInput">
-                        <input type="text">
+                        <input type="text" placeholder="搜索关键字 例：GB2312">
                     </div>
                     <a href="" class="searchBtn"><i class="iconfont icon-search"></i></a>
                 </div>
             </div>
             <div class="buySaller">
+                <!--<a href="" class="sellerEnter">我的环球</a>-->
                 <a href="" class="car"><i class="iconfont icon-buycar"></i>购物车 <span>9</span></a>
-                <a href="" class="sellerEnter">卖家入口</a>
             </div>
         </div>
     </div>
@@ -79,7 +81,7 @@
                         <li><a href="" class="classItem">O型圈</a></li>
                         <li><a href="" class="classItem">卡环</a></li>
                         <li><a href="" class="classItem">卡箍</a></li>
-                        <li><a href="" class="newClass">我有新的品类入驻</a></li>
+                        <li style="height: 50px"><a href="" class="newClass">我有新的品类入驻</a></li>
                     </ul>
                 </li>
                 <li class="menuItem active"><a href="index.html">首页</a></li>
