--- a/view/index.html
+++ b/view/index.html
@@ -67,20 +67,22 @@
 
     <!-- menu box start -->
     <div class="menu">
-        <div class="container">
+        <div class="container" style="position: relative">
             <ul class="menuInner">
                 <li class="classFlag">
                     <div class="className">分类</div>
-                    <ul class="classBox">
-                        <li><a href="" class="classItem active">螺丝</a></li>
-                        <li><a href="" class="classItem">垫片</a></li>
-                        <li><a href="" class="classItem">螺钉</a></li>
-                        <li><a href="" class="classItem">柳钉</a></li>
-                        <li><a href="" class="classItem">销</a></li>
-                        <li><a href="" class="classItem">接头</a></li>
-                        <li><a href="" class="classItem">O型圈</a></li>
-                        <li><a href="" class="classItem">卡环</a></li>
-                        <li><a href="" class="classItem">卡箍</a></li>
+                    <ul class="classBox" style="display:block;">
+                        <li><a href="" class="classItem active">
+                            <img src="../static/images/index/lei_1.png">
+                            螺丝</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_2.png">垫片</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_3.png">螺钉</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_4.png">柳钉</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_5.png">销</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_6.png">接头</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_7.png">O型圈</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_8.png">卡环</a></li>
+                        <li><a href="" class="classItem"><img src="../static/images/index/lei_9.png">卡箍</a></li>
                         <li style="height: 50px"><a href="" class="newClass">我有新的品类入驻</a></li>
                     </ul>
                 </li>
@@ -100,12 +102,364 @@
                 <li class="menuItem"><a href="pingpai.htm">品牌推广</a></li>
                 <li class="menuItem"><a href="#">平台商城</a></li>
             </ul>
-            <a href="#" class="fr"><span class="daohanghomeabout">关于我们</span></a>
+            <a href="#" class="aboutBtn">关于我们<i class="iconfont icon-help"></i></a>
         </div>
     </div>
     <!-- menu box end -->
+    <!-- 轮播和推广 start -->
+    <div class="container clearAll">
+        <div class="slider" id="slider">
+            <img src="../static/images/index/slider1.jpg" alt="">
+            <img src="../static/images/index/slider2.jpg" alt="">
+            <img src="../static/images/index/slider3.jpg" alt="">
+        </div>
+        <div class="smAdv">
+            <a href="" class="advItem " style="background-color: #8a6d3b">
+                <i class="iconfont icon-zhengpin"></i>正品保证
+            </a>
+            <a href="" class="advItem" style="background-color: #f37d84">
+                <i class="iconfont icon-baoyou"></i>量大包邮
+            </a>
+            <a href="" class="advItem" style="background-color: #319bf3">
+                <i class="iconfont icon-kucun"></i>库存充足
+            </a>
+        </div>
+    </div>
+    <!-- 轮播和推广 start -->
+    <!-- 推广的产品列表 start -->
+    <div class="goodList">
+        <div style="margin-right: -20px;">
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+            <a href="" class="goodItem">
+                <div class="goodImg">
+                    <img src="../static/images/index/xz.jpg" alt="">
+                </div>
+                <div class="goodName">普通六角</div>
+            </a>
+        </div>
+    </div>
+    <!-- 推广的产品列表 start -->
+    <div class="container clearAll">
+        <div class="model m60">
+            <div class="modelTop">最新询价 <span><a href="">MORE</a></span></div>
+            <table class="modelTable">
+                <tr>
+                    <td>序号</td>
+                    <td>规格</td>
+                    <td>要求</td>
+                    <td>地区</td>
+                    <td>日期</td>
+                    <td>个数</td>
+                    <td >共499个</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td >DIN933M12*30</td>
+                    <td >4.8级</td>
+                    <td >浙江-杭州</td>
+                    <td >2017-05-06</td>
+                    <td >2500件</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td >DIN933M12*30</td>
+                    <td >4.8级</td>
+                    <td >浙江-杭州</td>
+                    <td >2017-05-06</td>
+                    <td >2500件</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td >DIN933M12*30</td>
+                    <td >4.8级</td>
+                    <td >浙江-杭州</td>
+                    <td >2017-05-06</td>
+                    <td >2500件</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td >DIN933M12*30</td>
+                    <td >4.8级</td>
+                    <td >浙江-杭州</td>
+                    <td >2017-05-06</td>
+                    <td >2500件</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td >DIN933M12*30</td>
+                    <td >4.8级</td>
+                    <td >浙江-杭州</td>
+                    <td >2017-05-06</td>
+                    <td >2500件</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td >DIN933M12*30</td>
+                    <td >4.8级</td>
+                    <td >浙江-杭州</td>
+                    <td >2017-05-06</td>
+                    <td >2500件</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+            </table>
+        </div>
+        <!--/左-->
+        <!--右-->
+        <div class="model m40">
+            <div class="modelTop">最新询价 <span><a href="">MORE</a></span></div>
+            <table class="modelTable">
+                <tr>
+                    <td width="39" height="30" >序号</td>
+                    <td width="188">公司名称</td>
+                    <td width="94">日期</td>
+                    <td width="105">地区</td>
+                    <td width="123" >共499个</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td >DIN933M12*30</td>
+                    <td >2017-05-06</td>
+                    <td >浙江-杭州</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td >DIN933M12*30</td>
+                    <td >2017-05-06</td>
+                    <td >浙江-杭州</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td >DIN933M12*30</td>
+                    <td >2017-05-06</td>
+                    <td >浙江-杭州</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td >DIN933M12*30</td>
+                    <td >2017-05-06</td>
+                    <td >浙江-杭州</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td >DIN933M12*30</td>
+                    <td >2017-05-06</td>
+                    <td >浙江-杭州</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td >DIN933M12*30</td>
+                    <td >2017-05-06</td>
+                    <td >浙江-杭州</td>
+                    <td ><a href="">立即询价</a></td>
+                </tr>
+            </table>
+        </div>
+        <!--/右-->
+    </div>
+    <!-- 推广的产品列表 start -->
+    <!-- 产品说明 tab start -->
+    <div class="modelTab clearAll">
+        <div class="tabHeader">
+            <a href="" class="tabItem active" onmousemove="showTabItem(this,'jieshao');">介绍</a>
+            <a href="" class="tabItem" onmousemove="showTabItem(this,'luomao');">螺帽</a>
+            <a href="" class="tabItem" onmousemove="showTabItem(this,'anzhuangfangshi');">安装方式</a>
+            <a href="" class="tabItem" onmousemove="showTabItem(this,'shuoming');">说明</a>
+        </div>
+        <div class="tabBody">
+            <div class="item" id="jieshao" style="display: block">
+                1螺丝是利用物体的斜面圆形旋转和摩擦力的物理学和数学原理，循序渐进地紧固器物机件的工具。螺丝是紧固件的通用说法，日常口头语。螺丝为日常生活中不可或缺的工业必需品：如照相机、眼镜、钟表、电子等使用的极小的螺丝；电视、电气制品、乐器、家具等的一般螺丝；至于工程、建筑、桥梁则使用大型螺丝、螺帽；交通器具、飞机、电车、汽车等则为大小螺丝并用。螺丝在工业上负有重要任务，只要地球上存在着工业，则螺丝的功能永远重要。螺丝是千百年来人们生产生活中的共同发明，按照应用领域来看，它是人类的第一大发明
+            </div>
+            <div class="item" id="luomao" style="display: none">
+                2螺丝是利用物体的斜面圆形旋转和摩擦力的物理学和数学原理，循序渐进地紧固器物机件的工具。螺丝是紧固件的通用说法，日常口头语。螺丝为日常生活中不可或缺的工业必需品：如照相机、眼镜、钟表、电子等使用的极小的螺丝；电视、电气制品、乐器、家具等的一般螺丝；至于工程、建筑、桥梁则使用大型螺丝、螺帽；交通器具、飞机、电车、汽车等则为大小螺丝并用。螺丝在工业上负有重要任务，只要地球上存在着工业，则螺丝的功能永远重要。螺丝是千百年来人们生产生活中的共同发明，按照应用领域来看，它是人类的第一大发明
+            </div>
+            <div class="item" id="anzhuangfangshi" style="display: none">
+                3螺丝是利用物体的斜面圆形旋转和摩擦力的物理学和数学原理，循序渐进地紧固器物机件的工具。螺丝是紧固件的通用说法，日常口头语。螺丝为日常生活中不可或缺的工业必需品：如照相机、眼镜、钟表、电子等使用的极小的螺丝；电视、电气制品、乐器、家具等的一般螺丝；至于工程、建筑、桥梁则使用大型螺丝、螺帽；交通器具、飞机、电车、汽车等则为大小螺丝并用。螺丝在工业上负有重要任务，只要地球上存在着工业，则螺丝的功能永远重要。螺丝是千百年来人们生产生活中的共同发明，按照应用领域来看，它是人类的第一大发明
+            </div>
+            <div class="item" id="shuoming" style="display: none">
+                4螺丝是利用物体的斜面圆形旋转和摩擦力的物理学和数学原理，循序渐进地紧固器物机件的工具。螺丝是紧固件的通用说法，日常口头语。螺丝为日常生活中不可或缺的工业必需品：如照相机、眼镜、钟表、电子等使用的极小的螺丝；电视、电气制品、乐器、家具等的一般螺丝；至于工程、建筑、桥梁则使用大型螺丝、螺帽；交通器具、飞机、电车、汽车等则为大小螺丝并用。螺丝在工业上负有重要任务，只要地球上存在着工业，则螺丝的功能永远重要。螺丝是千百年来人们生产生活中的共同发明，按照应用领域来看，它是人类的第一大发明
+            </div>
+        </div>
+    </div>
+    <!-- 产品说明 tab end -->
+    <!-- 轮播产品 start -->
+    <div class="clearAll container">
+        <div class="slideAdvBox">
+            <div class="slideName">
+                <span>配</span>
+                <span>套</span>
+                <span>厂</span>
+                <span>家</span>
+            </div>
+            <div class="slideAdv" id="slideAdv">
+                <!--<div class="inner">-->
+                    <div class="item"><div class="img"><img src="../static/images/index/lsm.jpg"/></div><div class="itemName">普通六角1</div></div>
+                    <div class="item"><div class="img"><img src="../static/images/index/lsm.jpg"/></div><div class="itemName">普通六角1</div></div>
+                    <div class="item"><div class="img"><img src="../static/images/index/lsm.jpg"/></div><div class="itemName">普通六角1</div></div>
+                    <div class="item"><div class="img"><img src="../static/images/index/lsm.jpg"/></div><div class="itemName">普通六角1</div></div>
+                    <div class="item"><div class="img"><img src="../static/images/index/lsm.jpg"/></div><div class="itemName">普通六角1</div></div>
+                    <div class="item"><div class="img"><img src="../static/images/index/lsm.jpg"/></div><div class="itemName">普通六角1</div></div>
+                    <div class="item"><div class="img"><img src="../static/images/index/lsm.jpg"/></div><div class="itemName">普通六角1</div></div>
+                    <div class="item"><div class="img"><img src="../static/images/index/lsm.jpg"/></div><div class="itemName">普通六角1</div></div>
+                <!--</div>-->
+            </div>
+        </div>
+    </div>
+    <!-- 轮播产品 end -->
+
+    <!-- footer start -->
+    <div class="footer">
+        <div class="container">
+            <ul class="footerList">
+                <li>
+                    <p class="footerTitle">买家教程</p>
+                    <a href="#">1、如何查找产品</a>
+                    <a href="#">2、如何查找厂家</a>
+                    <a href="#">3、甄别产品和厂家</a>
+                    <a href="#">4、确定卖家</a>
+                </li>
+                <li>
+                    <p class="footerTitle">卖家教程</p>
+                    <a href="#">1、注册指南</a>
+                    <a href="#">2、基本信息上传</a>
+                    <a href="#">3、我有新品</a>
+                    <a href="#">4、联系我们</a>
+                    <a href="#">2、基本信息上传</a>
+                    <a href="#">3、我有新品</a>
+                    <a href="#">4、联系我们</a>
+                </li>
+                <li>
+                    <p class="footerTitle">关于平台</p>
+                    <a href="#">1、平台介绍</a>
+                    <a href="#">2、成为供应商</a>
+                    <a href="#">3、加入我们</a>
+                    <a href="#">4、联系我们</a>
+                </li>
+            </ul>
+            <div class="webmsg clearAll">
+                <span>◎2003-2017 环球标准件网版权所有 </span>
+                <span>客服热线：888-8888888</span>
+                <a href=""><img src="../static/images/common/kx.jpg" /></a>
+                <a href=""><img src="../static/images/common/cnhl.jpg" /></a>
+            </div>
+        </div>
+    </div>
+    <!-- footer end -->
 
     <script type="text/javascript" src="../static/js/jquery.min.js"></script>
+    <script type="text/javascript" src="../static/js/jquery.slides.min.js"></script>
+    <script type="text/javascript" src="../static/js/slick.js"></script>
     <script type="text/javascript" src="../static/js/common.js"></script>
+    <script type="text/javascript">
+        $(function() {
+            $('#slider').slidesjs({
+                width: 960,
+                height: 330,
+                navigation:{
+                    active:false
+                },
+                effect: {
+                    fade: {
+                        speed: 400,
+                    }
+                },
+                pagination: {
+                    effect: "fade"
+                },
+                play: {
+                    active: false,
+                    auto: true,
+                    interval: 4000,
+                    swap: false,
+                    effect: "fade"
+                }
+            });
+//            $("#slideAdv").gundong();
+            $('#slideAdv').slick({
+                dots: false,
+                slidesToShow: 4.99,
+                slidesToScroll: 1,
+                draggable:true,
+                arrows:false,
+                autoplay:true,
+                autoplaySpeed:2000,
+                vertical:false,
+            });
+        });
+    </script>
 </body>
 </html>
