--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,6 @@
+@charset "UTF-8";
 /* common start  */
-html, body { position: relative; margin: 0px; padding: 0px; font-size: 12px; color: #333; background-color: #f9f9f9; }
+html, body { position: relative; margin: 0px; padding: 0px; font-size: 12px; color: #333; background-color: #F7F7F7; }
 
 .iconfont { line-height: inherit; font-size: inherit; }
 
@@ -94,11 +95,13 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .menu .menuInner li.classFlag:hover .classBox { display: block; }
 
-.menu .menuInner li.classFlag .classBox { position: absolute; width: 200px; z-index: 10; background-color: rgba(0, 0, 0, 0.5); display: none; }
+.menu .menuInner li.classFlag .classBox { position: absolute; width: 200px; z-index: 20; background-color: rgba(0, 0, 0, 0.5); display: none; }
 
 .menu .menuInner li.classFlag .classBox li { clear: both; overflow: hidden; height: 30px; line-height: 30px; width: 100%; display: block; margin-bottom: 1px; }
 
 .menu .menuInner li.classFlag .classBox li .classItem { display: block; padding-left: 30px; color: #fff; position: relative; font-size: 14px; }
+
+.menu .menuInner li.classFlag .classBox li .classItem img { width: 16px; margin-right: 5px; vertical-align: middle; }
 
 .menu .menuInner li.classFlag .classBox li .classItem:hover, .menu .menuInner li.classFlag .classBox li .classItem.active { background-color: #fff; color: #333; }
 
@@ -116,7 +119,7 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .menu .menuInner li.menuItem:hover .secondMenu { display: block; }
 
-.menu .menuInner li.menuItem .secondMenu { position: absolute; display: none; }
+.menu .menuInner li.menuItem .secondMenu { position: absolute; display: none; z-index: 20; }
 
 .menu .menuInner li.menuItem .secondMenu li { display: block; height: 40px; }
 
@@ -124,4 +127,120 @@ ul { margin: 0px; padding: 0px; list-style: none; }
 
 .menu .menuInner li.menuItem .secondMenu li a:hover { background-color: #2259be; }
 
+.menu .aboutBtn { position: absolute; height: 40px; line-height: 40px; color: #fff; top: 0px; right: 0px; }
+
+.menu .aboutBtn:hover { color: #f60; }
+
 /* menu box end */
+/* 轮播图片和推广 start */
+.slider { width: 960px; float: left; height: 330px; overflow: hidden; position: relative; }
+
+.slider .slidesjs-navigation { display: none; }
+
+.slider .slidesjs-pagination { position: absolute; bottom: 10px; text-align: center; width: 100%; }
+
+.slider .slidesjs-pagination .slidesjs-pagination-item { display: inline-block; width: 10px; height: 10px; border-radius: 10px; padding: 3px; background-color: #3c76df; margin: 0px 5px; line-height: 100; overflow: hidden; }
+
+.slider .slidesjs-pagination .slidesjs-pagination-item a { display: block; overflow: hidden; }
+
+.slider .slidesjs-pagination .slidesjs-pagination-item a.active { background-color: #fff; height: 10px; width: 10px; border-radius: 10px; }
+
+.smAdv { width: 220px; float: left; height: 330px; padding-left: 20px; background-color: #fff; }
+
+.smAdv .advItem { display: block; width: 220px; height: 100px; margin-top: 10px; line-height: 100px; text-align: center; font-size: 24px; color: #fff; -webkit-box-shadow: 0px 5px 5px rgba(200, 200, 200, 0.4); box-shadow: 0px 5px 5px rgba(200, 200, 200, 0.4); }
+
+/* 轮播图片和推广 end */
+/* 首页推广产品列表 start */
+.goodList { clear: both; overflow: hidden; }
+
+.goodList .goodItem { float: left; width: 190px; height: 220px; overflow: hidden; margin: 20px 10px 0px 0px; border: 1px solid transparent; background-color: #fff; }
+
+.goodList .goodItem .goodImg { width: 190px; height: 190px; }
+
+.goodList .goodItem .goodImg img { width: 100%; }
+
+.goodList .goodItem .goodName { line-height: 30px; font-size: 14px; text-align: center; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; color: #333; }
+
+.goodList .goodItem:hover { -webkit-box-shadow: 0px 5px 5px rgba(200, 200, 200, 0.7); box-shadow: 0px 5px 5px rgba(200, 200, 200, 0.7); border-color: #3c76df; }
+
+.goodList .goodItem:hover .goodName { color: #3c76df; }
+
+/* 首页推广产品列表 end */
+/* 询价表哥 start */
+.model { background-color: #fff; margin-top: 20px; }
+
+.model.m60 { float: left; width: 710px; }
+
+.model.m40 { float: right; width: 470px; }
+
+.model .modelTop { height: 40px; background-color: #3c76df; color: #fff; padding: 0px 10px; line-height: 40px; font-size: 16px; clear: both; overflow: hidden; }
+
+.model .modelTop a { float: right; font-size: 14px; color: #fff; }
+
+.model .modelTop a:hover { color: #f60; }
+
+.model .modelTable { width: 100%; }
+
+.model .modelTable tr:nth-child(2n) { background-color: #f9f9f9; }
+
+.model .modelTable tr:first-child td { color: #3c76df; font-size: 14px; }
+
+.model .modelTable tr:first-child td:last-child, .model .modelTable tr:first-child td:first-child { color: #333; }
+
+.model .modelTable tr:hover { background-color: #F7F7F7; }
+
+.model .modelTable td { height: 30px; line-height: 30px; text-align: center; }
+
+.model .modelTable td a { color: #f60; }
+
+.model .modelTable td a:hover { color: #f90; }
+
+/* 询价表哥 start */
+/*  产品说明 tab start */
+.modelTab { background-color: #fff; margin-top: 20px; }
+
+.modelTab .tabHeader { height: 30px; line-height: 30px; border-bottom: 1px solid #eee; }
+
+.modelTab .tabHeader a { display: inline-block; padding: 0px 15px; font-size: 16px; color: #333; }
+
+.modelTab .tabHeader a:hover, .modelTab .tabHeader a.active { background-color: #3c76df; color: #fff; }
+
+.modelTab .tabBody { padding: 10px; font-size: 14px; line-height: 2; }
+
+/*  产品说明 tab end */
+/* 轮播产品广告 start */
+.slideAdvBox { margin-top: 20px; background-color: #fff; }
+
+.slideAdvBox .slideName { height: 212px; width: 50px; float: left; background-color: #3c76df; word-wrap: break-word; font-size: 20px; text-align: center; padding-top: 20px; }
+
+.slideAdvBox .slideName span { display: block; text-align: center; line-height: 2; color: #fff; }
+
+.slideAdvBox .slideAdv { float: left; width: 1150px; height: 232px; overflow: hidden; background-color: #fff; }
+
+.slideAdvBox .slideAdv .item { float: left; border: 1px solid transparent; width: 230px; }
+
+.slideAdvBox .slideAdv .item .img { width: 230px; height: 200px; }
+
+.slideAdvBox .slideAdv .item .itemName { text-align: center; height: 30px; line-height: 30px; font-size: 14px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
+
+.slideAdvBox .slideAdv .item:hover { color: #3c76df; border-color: #3c76df; }
+
+/* 轮播产品广告 end */
+/*footer start */
+.footer { background-color: #eee; background-image: url("../images/common/footer.jpg"); margin-top: 30px; }
+
+.footer .footerList { clear: both; overflow: hidden; width: 100%; background-image: url("../images/common/footer.png"); background-position: center; background-repeat: no-repeat; background-size: cover; text-align: center; height: 180px; }
+
+.footer .footerList li { display: inline-block; text-align: left; vertical-align: top; padding: 20px 0px; width: 33%; }
+
+.footer .footerList li .footerTitle { font-size: 20px; color: #fff; line-height: 2; }
+
+.footer .footerList li a { display: block; color: #fff; line-height: 2; }
+
+.footer .footerList li a:hover { color: #f60; }
+
+.footer .webmsg { text-align: center; height: 30px; line-height: 30px; color: #aaa; margin-top: 10px; }
+
+.footer .webmsg img { height: 16px; }
+
+/*footer end */
