--- a/static/images/common/icon/iconfont.css
+++ b/static/images/common/icon/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1495336514440'); /* IE9*/
-  src: url('iconfont.eot?t=1495336514440#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1495336514440') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1495336514440') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1495336514440#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1495355793402'); /* IE9*/
+  src: url('iconfont.eot?t=1495355793402#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1495355793402') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1495355793402') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1495355793402#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -20,4 +20,12 @@
 .icon-search:before { content: "\e615"; }
 
 .icon-down:before { content: "\e602"; }
+
+.icon-zhengpin:before { content: "\e672"; }
+
+.icon-baoyou:before { content: "\e72d"; }
+
+.icon-kucun:before { content: "\e6bf"; }
+
+.icon-help:before { content: "\e601"; }
 
