--- a/static/sass/base.scss
+++ b/static/sass/base.scss
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 /* common start  */
+$baseColor:#3c76df;
 html,body{
   position: relative;
   margin: 0px;
   padding: 0px;
   font-size: 12px;
   color: #333;
-  background-color: #f9f9f9;
+  background-color: #F7F7F7;
 }
 .iconfont{
   line-height: inherit;
@@ -255,7 +256,7 @@ ul{
         .classBox{
           position: absolute;
           width: 200px;
-          z-index: 10;
+          z-index: 20;
           background-color: rgba(0,0,0,0.5);
           display: none;
           li{
@@ -272,6 +273,12 @@ ul{
               color: #fff;
               position: relative;
               font-size: 14px;
+              img{
+                width: 16px;
+                margin-right: 5px;
+                //width: 10px;
+                vertical-align: middle;
+              }
               &:hover,&.active{
                 background-color: #fff;
                 color: #333;
@@ -323,6 +330,7 @@ ul{
         .secondMenu{
           position: absolute;
           display: none;
+          z-index: 20;
           li{
             display: block;
             height: 40px;
@@ -340,5 +348,297 @@ ul{
       }
     }
   }
+  .aboutBtn{
+    position: absolute;
+    height: 40px;
+    line-height: 40px;
+    color: #fff;
+    top:0px;
+    right:0px;
+    &:hover{
+      color: #f60;
+    }
+  }
 }
 /* menu box end */
+/* 轮播图片和推广 start */
+.slider{
+  width: 960px;
+  float: left;
+  height: 330px;
+  overflow: hidden;
+  position: relative;
+  .slidesjs-navigation{
+    display: none;
+  }
+  .slidesjs-pagination{
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+    width: 100%;
+    .slidesjs-pagination-item{
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      border-radius: 10px;
+      padding: 3px;
+      background-color: #3c76df;
+      margin: 0px 5px;
+      line-height: 100;
+      overflow: hidden;
+      a{
+        display: block;
+        overflow: hidden;
+        &.active{
+          background-color: #fff;
+          height: 10px;
+          width: 10px;
+          border-radius: 10px;
+        }
+      }
+    }
+  }
+}
+.smAdv{
+  width: 220px;
+  float: left;
+  height: 330px;
+  padding-left: 20px;
+  background-color: #fff;
+  .advItem{
+    display: block;
+    width: 220px;
+    height: 100px;
+    margin-top:10px;
+    line-height: 100px;
+    text-align: center;
+    font-size: 24px;
+    color: #fff;
+    box-shadow: 0px 5px 5px rgba(200,200,200,0.4);
+  }
+}
+/* 轮播图片和推广 end */
+/* 首页推广产品列表 start */
+.goodList{
+  clear: both;
+  overflow: hidden;
+  .goodItem{
+    float: left;
+    width: 190px;
+    height: 220px;
+    overflow: hidden;
+    margin: 20px 10px 0px 0px;
+    border: 1px solid transparent;
+    background-color: #fff;
+    .goodImg{
+      width: 190px;
+      height: 190px;
+      img{
+        width: 100%;
+      }
+    }
+    .goodName{
+      line-height: 30px;
+      font-size: 14px;
+      text-align: center;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      color: #333;
+    }
+    &:hover{
+      box-shadow: 0px 5px 5px rgba(200,200,200,0.7);
+      border-color: #3c76df;
+      .goodName{
+        color: #3c76df;
+      }
+    }
+  }
+}
+/* 首页推广产品列表 end */
+/* 询价表哥 start */
+.model{
+  background-color: #fff;
+  margin-top: 20px;
+  &.m60{
+    float: left;
+    width: 710px;
+  }
+  &.m40{
+    float: right;
+    width: 470px;
+  }
+  .modelTop{
+    height: 40px;
+    background-color: #3c76df;
+    color: #fff;
+    padding: 0px 10px;
+    line-height: 40px;
+    font-size: 16px;
+    clear: both;
+    overflow: hidden;
+    a{
+      float: right;
+      font-size: 14px;
+      color: #fff;
+      &:hover{
+        color: #f60;
+      }
+    }
+  }
+  .modelTable{
+    width: 100%;
+    tr:nth-child(2n){
+      background-color: #f9f9f9;
+    }
+    tr:first-child{
+      td{
+        color: $baseColor;
+        font-size: 14px;
+        &:last-child,&:first-child{
+          color: #333;
+        }
+      }
+    }
+    tr:hover{
+      background-color: #F7F7F7;
+    }
+    td{
+      height: 30px;
+      line-height: 30px;
+      text-align: center;
+      a{
+        color: #f60;
+        &:hover{
+          color: #f90;
+        }
+      }
+    }
+  }
+}
+/* 询价表哥 start */
+/*  产品说明 tab start */
+.modelTab{
+  background-color: #fff;
+  margin-top: 20px;
+  .tabHeader{
+    height: 30px;
+    line-height: 30px;
+    border-bottom: 1px solid #eee;
+    a{
+      display: inline-block;
+      padding: 0px 15px;
+      font-size: 16px;
+      color: #333;
+      &:hover,&.active{
+        background-color: $baseColor;
+        color: #fff;
+      }
+    }
+  }
+  .tabBody{
+    padding: 10px;
+    font-size: 14px;
+    line-height: 2;
+  }
+}
+/*  产品说明 tab end */
+/* 轮播产品广告 start */
+.slideAdvBox{
+  margin-top: 20px;
+  background-color: #fff;
+  .slideName{
+    height: 212px;
+    width: 50px;
+    float: left;
+    background-color: $baseColor;
+    word-wrap: break-word;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 20px;
+    span{
+      display: block;
+      text-align: center;
+      line-height: 2;
+      color: #fff;
+    }
+  }
+  .slideAdv{
+    float: left;
+    width: 1150px;
+    height: 232px;
+    overflow: hidden;
+    background-color: #fff;
+    .item{
+      float: left;
+      border: 1px solid transparent;
+      width: 230px;
+      .img{
+        width: 230px;
+        height: 200px;
+      }
+      .itemName{
+        text-align: center;
+        height: 30px;
+        line-height: 30px;
+        font-size: 14px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+      }
+      &:hover{
+        color: $baseColor;
+        border-color: $baseColor;
+      }
+    }
+  }
+}
+/* 轮播产品广告 end */
+/*footer start */
+.footer{
+  background-color: #eee;
+  background-image: url("../images/common/footer.jpg");
+  margin-top: 30px;
+  .footerList{
+    clear: both;
+    overflow: hidden;
+    width: 100%;
+    background-image: url("../images/common/footer.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    height: 180px;
+    li{
+      display: inline-block;
+      text-align: left;
+      vertical-align: top;
+      padding: 20px 0px;
+      width: 33%;
+      .footerTitle{
+        font-size: 20px;
+        color: #fff;
+        line-height: 2;
+      }
+      a{
+        display: block;
+        color: #fff;
+        line-height: 2;
+        &:hover{
+          color: #f60;
+        }
+      }
+    }
+  }
+  .webmsg{
+    text-align: center;
+    height: 30px;
+    line-height: 30px;
+    color: #aaa;
+    margin-top: 10px;
+    img{
+      height: 16px;
+    }
+  }
+}
+/*footer end */
