--- a/view/index.html
+++ b/view/index.html
@@ -127,7 +127,7 @@
     </div>
     <!-- 轮播和推广 start -->
     <!-- 推广的产品列表 start -->
-    <div class="goodList">
+    <div class="goodList container">
         <div style="margin-right: -20px;">
             <a href="" class="goodItem">
                 <div class="goodImg">
