--- a/view/index.html
+++ b/view/index.html
@@ -333,7 +333,7 @@
     </div>
     <!-- 推广的产品列表 start -->
     <!-- 产品说明 tab start -->
-    <div class="modelTab clearAll">
+    <div class="modelTab container clearAll">
         <div class="tabHeader">
             <a href="" class="tabItem active" onmousemove="showTabItem(this,'jieshao');">介绍</a>
             <a href="" class="tabItem" onmousemove="showTabItem(this,'luomao');">螺帽</a>
